--- a/Pumpkin/pumpkin.css
+++ b/Pumpkin/pumpkin.css
@@ -126,7 +126,7 @@ body {
     width: 0.5em;
     height: 1em;
     position: absolute;
-    top: 7.7em;
+    top: 6.9em;
     left: 7.25em;
     border-top: 0.8em solid transparent;
     border-bottom: 0em solid transparent;
@@ -157,4 +157,31 @@ body {
   transform: rotate(30deg);
   border-bottom: 0.5em solid transparent;
   border-left: 1em solid #401b03;
+}
+
+.shadow {
+  margin: 10% auto 0;
+  background: #000;
+  width: 230px;
+  height: 50px;
+  border-radius: 50%;
+  animation: zoom 3s infinite;
+}
+
+@keyframes float {
+  0%,100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10%);
+  }
+}
+
+@keyframes zoom {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(0.8);
+  }
 }
